Optimize Google Ads

--- a/assets/scss/_counter.scss
+++ b/assets/scss/_counter.scss
@@ -2,7 +2,7 @@
  Counter Section Style
  ========================================================================== */
  #counter{
-  background: url(../img/count-bg.jpg);
+  background-color: black;
   background-position: center center;
   background-size: cover;
   position: relative;
