--- a/assets/fonts/line-icons.css
+++ b/assets/fonts/line-icons.css
@@ -7,6 +7,7 @@
     url('../fonts/LineIcons.svg?tc3uo0#LineIcons') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 [class^="lni-"], [class*=" lni-"] {
