--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web:600,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web:600,700&display=swap");
 html {
   overflow-x: hidden;
 }
