--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,6 +1,6 @@
 
 // Font Family
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web:600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web:600,700&display=swap');
 html{
   overflow-x: hidden;
 }
