--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -804,7 +804,7 @@ hr {
  Counter Section Style
  ========================================================================== */
 #counter {
-  background-color: black;
+  background: url(../img/count-bg.jpg);
   background-position: center center;
   background-size: cover;
   position: relative;
