--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -669,7 +669,7 @@ hr {
 }
 
 #hero-area .contents .head-title {
-  color: #585b60;
+  color: #ffffff;
   text-transform: uppercase;
   font-size: 30px;
   line-height: 48px;
@@ -1907,7 +1907,7 @@ textarea {
 
 .copyright p {
   line-height: 20px;
-  color: rgb(160, 147, 225);
+  color: rgba(255, 255, 255, 0.789);
   text-align: center;
   margin: 0;
 }
