--- a/assets/fonts/line-icons.css
+++ b/assets/fonts/line-icons.css
@@ -1,36 +1,35 @@
 @font-face {
-  font-family: 'LineIcons';
-  src:  url('../fonts/LineIcons.eot?tc3uo0');
-  src:  url('../fonts/LineIcons.eot?tc3uo0#iefix') format('embedded-opentype'),
-    url('../fonts/LineIcons.ttf?tc3uo0') format('truetype'),
-    url('../fonts/LineIcons.woff?tc3uo0') format('woff'),
-    url('../fonts/LineIcons.svg?tc3uo0#LineIcons') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
+    font-family: 'LineIcons';
+    src: url('../fonts/LineIcons.eot?tc3uo0');
+    src: url('../fonts/LineIcons.eot?tc3uo0#iefix') format('embedded-opentype'), url('../fonts/LineIcons.ttf?tc3uo0') format('truetype'), url('../fonts/LineIcons.woff?tc3uo0') format('woff'), url('../fonts/LineIcons.svg?tc3uo0#LineIcons') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: optional
 }
 
-[class^="lni-"], [class*=" lni-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'LineIcons' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^="lni-"],
+[class*=" lni-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'LineIcons' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .lni-arrow-up:before {
-  content: "\e918";
+    content: "\e918";
 }
+
 .lni-emoji-smile:before {
-  content: "\e967";
+    content: "\e967";
 }
+
 .lni-users:before {
-  content: "\ea20";
+    content: "\ea20";
 }
